[package]
name = "hivemind_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hivemind_types = { path = "../types" }

nalgebra = { version = "0.32.2", features = ["serde"] }
rust_decimal = { version = "1.29.1", features = ["maths", "serde"] }
rust_decimal_macros = "1.29.1"

thiserror = "1.0.40"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
