[package]
name = "hivemind_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hivemind_types = { path = "../types" }
thiserror = "1.0.40"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
rust_decimal = "1.29.1"
